--- a/composer.json
+++ b/composer.json
@@ -15,15 +15,14 @@
         "indigophp/container": "dev-develop",
         "fuelphp/validation": "dev-master"
     },
+    "require-dev": {
+        "codeception/codeception": "~2.0.0"
+    },
     "autoload": {
         "psr-4": {
             "Indigo\\Cart\\": "src/"
         }
     },
-    "autoload-dev": {
-        "psr-4": {
-            "Indigo\\Cart\\Test\\": "tests/"
-        }
-    },
+    "prefer-stable": true,
     "minimum-stability": "dev"
 }
