--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     ],
     "require": {
         "php": ">=5.4.0",
-        "indigophp/container": "dev-develop",
+        "indigophp/container": "~1.0.0",
         "fuelphp/validation": "dev-master"
     },
     "require-dev": {
