--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "fuelphp/validation": "dev-master"
     },
     "require-dev": {
-        "codeception/codeception": "~2.0.0"
+        "codeception/codeception": "~2.0.0",
+        "codeception/mockery-module": "dev-master"
     },
     "autoload": {
         "psr-4": {
