--- a/composer.json
+++ b/composer.json
@@ -11,9 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0",
-        "indigophp/container": "~1.0.0",
-        "fuelphp/validation": "dev-master"
+        "php": ">=5.4.0"
     },
     "require-dev": {
         "codeception/codeception": "~2.0.0",
