--- a/.editorconfig
+++ b/.editorconfig
@@ -14,6 +14,10 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
-[{*.yml,phpspec.*}]
+[*.yml]
+indent_style = space
+indent_size = 2
+
+[phpspec.*]
 indent_style = space
 indent_size = 2
