--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "php": ">=5.4.0"
     },
     "require-dev": {
-        "phpspec/phpspec": "~2.0",
+        "phpspec/phpspec": "2.1.*@dev,>=2.1.0-RC2",
         "henrikbjorn/phpspec-code-coverage" : "1.0.*@dev"
     },
     "autoload": {
