--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,20 @@
 language: php
+
 php:
   - 5.4
   - 5.5
   - 5.6
   - hhvm
 
-matrix:
-  allow_failures:
-    - php: hhvm
-  fast_finish: true
+before_script:
+  - travis_retry composer self-update
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then composer remove "henrikbjorn/phpspec-code-coverage" --dev --no-update; fi
+  - travis_retry composer install --prefer-source --no-interaction
 
 script:
-  - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then bin/phpspec run; fi;'
-  - bash -c 'if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then bin/phpspec run -c phpspec.yml.hhvm; fi;'
-
-before_script:
-  - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then wget https://scrutinizer-ci.com/ocular.phar; fi;'
-  - bash -c 'if [ "$TRAVIS_PHP_VERSION" == "hhvm" ]; then composer remove "henrikbjorn/phpspec-code-coverage" --dev --no-update; fi;'
-  - composer install --prefer-source
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then vendor/bin/phpspec run -c phpspec.yml.ci; fi
+  - if [[ "$TRAVIS_PHP_VERSION" == "hhvm" ]]; then vendor/bin/phpspec run; fi
 
 after_script:
-  - bash -c 'if [ "$TRAVIS_PHP_VERSION" != "hhvm" ]; then php ocular.phar code-coverage:upload --format=php-clover build/coverage.xml; fi;'
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then wget https://scrutinizer-ci.com/ocular.phar; fi
+  - if [[ "$TRAVIS_PHP_VERSION" != "hhvm" ]]; then php ocular.phar code-coverage:upload --format=php-clover build/coverage.xml; fi
