--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,11 @@
         }
     ],
     "require": {
-        "php": ">=5.4.0"
+        "php": ">=5.4"
     },
     "require-dev": {
-        "phpspec/phpspec": "2.1.*@dev,>=2.1.0-RC2",
-        "henrikbjorn/phpspec-code-coverage" : "1.0.*@dev"
+        "phpspec/phpspec": "~2.1",
+        "henrikbjorn/phpspec-code-coverage" : "~1.0"
     },
     "autoload": {
         "psr-4": {
@@ -27,8 +27,10 @@
             "Indigo\\Cart\\Stub\\": "stub/"
         }
     },
-    "config": {
-        "bin-dir": "bin"
+    "extra": {
+        "branch-alias": {
+            "dev-master": "3.0-dev"
+        }
     },
     "prefer-stable": true,
     "minimum-stability": "dev"
