--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         }
     ],
     "require": {
-        "php": ">=5.4"
+        "php": ">=5.4",
+        "beberlei/assert": "~2.3"
     },
     "require-dev": {
         "phpspec/phpspec": "~2.1",
